--- a/spider/package.json
+++ b/spider/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "dependencies": {
     "await-spawn": "^3.0.0",
-    "he": "^1.2.0"
+    "he": "^1.2.0",
+    "node-wget-promise": "^0.1.6"
   }
 }
