--- a/.envrc
+++ b/.envrc
@@ -3,10 +3,22 @@ set -e
 
 _DIR=`pwd`
 
-if [ ! -e "./node_modules" ]; then
+if [ ! -e "$_DIR/spider/node_modules" ]; then
+  cd $_DIR/spider
   npx yarn
 fi
 
+
+if [ ! -e "$_DIR/lib/node_modules" ]; then
+  cd $_DIR/lib
+  npx yarn
+fi
+
+
+cd $_DIR
+if [ ! -e "./node_modules" ]; then
+  npx yarn
+fi
 PATH="$_DIR/.direnv/bin:$PATH"
 
 alias coffee=$(npx which coffee)
