--- a/.envrc
+++ b/.envrc
@@ -3,22 +3,17 @@ set -e
 
 _DIR=`pwd`
 
-if [ ! -e "$_DIR/spider/node_modules" ]; then
-  cd $_DIR/spider
-  npx yarn
+init() {
+if [ ! -e "$_DIR/$1/node_modules" ]; then
+cd $_DIR/$1
+yarn config set registry https://registry.npm.taobao.org
+npx yarn
 fi
+}
+init spider
+init lib
+init .
 
-
-if [ ! -e "$_DIR/lib/node_modules" ]; then
-  cd $_DIR/lib
-  npx yarn
-fi
-
-
-cd $_DIR
-if [ ! -e "./node_modules" ]; then
-  npx yarn
-fi
 PATH="$_DIR/.direnv/bin:$PATH"
 
 alias coffee=$(npx which coffee)
