--- a/.envrc
+++ b/.envrc
@@ -6,8 +6,7 @@ _DIR=`pwd`
 init() {
 if [ ! -e "$_DIR/$1/node_modules" ]; then
 cd $_DIR/$1
-yarn config set registry https://registry.npm.taobao.org
-npx yarn
+npm install 
 fi
 }
 init spider
