--- a/.envrc
+++ b/.envrc
@@ -6,12 +6,13 @@ _DIR=`pwd`
 init() {
 if [ ! -e "$_DIR/$1/node_modules" ]; then
 cd $_DIR/$1
-npm install 
+npm install &
 fi
 }
 init spider
 init lib
 init .
+wait
 
 PATH="$_DIR/.direnv/bin:$PATH"
 
