--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fs-extra": "^9.0.1",
     "js-yaml": "^3.14.0",
     "klaw": "^3.0.0",
+    "klaw-sync": "^6.0.0",
     "lodash": "^4.17.19",
     "module-alias": "^2.2.2",
     "threads": "^1.6.3",
